add Rental + Message table and repo + controller + service

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=demo
 
 # URL et credentials de la base de données
-spring.datasource.url=jdbc:mysql://localhost:3306/newDb
-spring.datasource.username=root
-#spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://localhost:3306/
+spring.datasource.username=clement
+spring.datasource.password=Klapaucius972!
 
 # Toujours initialiser les scripts SQL au démarrage
 spring.sql.init.schema-locations=classpath:schema.sql
